@@ -1,0 +1,6 @@
+#ifndef _LIBUMWSU_ALERT_H_
+#define _LIBUMWSU_ALERT_H_
+
+void umwsu_alert_callback(struct umwsu *umwsu_handle, struct umwsu_report *report, void **callback_data);
+
+#endif
