@@ -61,40 +61,3 @@ const char *umwsu_status_pretty_str(enum umwsu_status status)
   return "inconnu";
 }
 
-void umwsu_report_print(struct umwsu_report *report, FILE *out)
-{
-  fprintf(out, "%s: %s", report->path, umwsu_status_pretty_str(report->status));
-  if (report->status != UMWSU_CLEAN && report->status != UMWSU_UNKNOWN_FILE_TYPE)
-    fprintf(out, " [%s - %s]", report->mod_name, report->mod_report);
-  fprintf(out, "\n");
-}
-
-void umwsu_report_init(struct umwsu_report *report, const char *path)
-{
-  report->status = UMWSU_CLEAN;
-  report->path = strdup(path);
-  report->mod_name = NULL;
-  report->mod_report = NULL;
-}
-
-void umwsu_report_destroy(struct umwsu_report *report)
-{
-  free(report->path);
-  if (report->mod_report != NULL)
-    free(report->mod_report);
-}
-
-void umwsu_report_change(struct umwsu_report *report, enum umwsu_status status, const char *mod_name, const char *mod_report)
-{
-  report->status = status;
-
-  if (mod_name != NULL)
-    report->mod_name = (char *)mod_name;
-
-  if (mod_report != NULL) {
-    if (report->mod_report != NULL)
-      free(report->mod_report);
-
-    report->mod_report = (char *)mod_report;
-  }
-}
